<resources>
    <string name="app_name">Polls</string>
    <string name="vote_intro">Vote on other people\'s polls</string>
    <string name="create_poll">Create poll</string>
    <string name="share_polls">Share polls</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="get_started">Get Started</string>
    <string name="username_or_email">Username Or Email</string>
    <string name="password">password</string>
    <string name="forgot_password">forgot password?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="title_authentication">Authentication</string>
    <string name="home">Home</string>
    <string name="profile">profile</string>
</resources>
